--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</header>
 									<span class="image fit"><img src="images/Curve_Tracer.png" alt="" /></span>
 									<span class="image fit"><img src="images/NPN_Curve.png" alt="" /></span>
-									<p>Plots I-V characteristic curves on an oscilloscope using a triangle generator, step function, and optoisolator circuit.</p>
+									<p>I-V characteristic curves plotted on an oscilloscope using a triangle generator, step function, and optoisolator circuit.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul> -->
@@ -87,6 +87,28 @@
 									<span class="image fit"><img src="images/Antenna.png" alt="" /></span>
 									<span class="image fit"><img src="images/Antenna_Sweep.png" alt="" /></span>
 									<p>Planar Antenna prototype later milled. |S<sub>11</sub>| less than -10dB at 900MHz and 2.45GHz, for both simulation (top plot) and actual measurement (bottom plot).</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul> -->
+								</article>
+								<article>
+									<header>
+										<span class="date">Analog Electronics</span>
+										<h2>ECG</h2>
+									</header>
+									<span class="image fit"><img src="images/ECG.png" alt="" /></span>
+									<p>Filters, amplifies, and offsets PKG signals taken from electrodes on the forearms.</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul> -->
+								</article>
+								<article>
+									<header>
+										<span class="date">Analog Electronics</span>
+										<h2>Wireless Power Harvester</h2>
+									</header>
+									<span class="image fit"><img src="images/Harvesting.jpg" alt="" /></span>
+									<p>Center fed half wave antenna tuned to 96.9MHz. Boston's <a href="https://en.wikipedia.org/wiki/Prudential_Tower">Prudential Tower</a> on the other side of the city radiates enough wireless power for a Cockcroft-Walton voltage multiplier to light an LED.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul> -->
@@ -108,7 +130,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Circuits</span>
+										<span class="date">Circuits Lab</span>
 										<h2>Photoresistor Cart</h2>
 									</header>
 									<div style="text-align: center;">
@@ -164,7 +186,7 @@
 											<source src="videos/Induction_Motor.mp4">
 										</video>
 									</div>
-									<p>6 power switches in half-bridge configurations produce 3 AC currents separated by 120 degrees. Generates a rotating magnetic field that induces rotor current.</p>
+									<p>6 MOSFETs in half-bridge configurations produce 3 AC currents separated by 120 degrees. Generates a rotating magnetic field that induces rotor current.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul> -->
@@ -182,6 +204,36 @@
 									<p>if (OUT_OF_BOUNDS(snake)) {<br />
 									&nbsp;&nbsp;&nbsp;&nbsp;don't lol;<br />
 									}</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul> -->
+								</article>
+								<article>
+									<header>
+										<span class="date">Dynamics & Controls</span>
+										<h2>Maglev Controller</h2>
+									</header>
+									<div style="text-align: center;">
+										<video width="225" height="400" controls>
+											<source src="videos/Maglev.mov">
+										</video>
+									</div>
+									<p>PID Controller reads position as feedback to control electromagnetic current and levitate a magnet.</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul> -->
+								</article>
+								<article>
+									<header>
+										<span class="date">Robotics Workshop</span>
+										<h2>Maze Robot Turn Control</h2>
+									</header>
+									<div style="text-align: center;">
+										<video width="225" height="400" controls>
+											<source src="videos/P_Controller.mov">
+										</video>
+									</div>
+									<p>P Controller calculates wall distance to control a turn.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul> -->
