2025-07-20 fixed index link

--- a/miscellaneous_2.html
+++ b/miscellaneous_2.html
@@ -19,13 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="projects.html" class="logo">Timmy Bui</a>
+						<a href="index.html" class="logo">Timmy Bui</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="projects.html">Projects</a></li>
+							<li><a href="index.html">Projects</a></li>
 							<li><a href="climbing.html">Climbing</a></li>
 							<li class="active"><a href="miscellaneous_2.html">Miscellaneous</a></li>
 						</ul>
